@@ -1,3 +1,8 @@
+Sep 27, 2003
+
+* ENHANCED: cleanup of context lifetime management (could lead do freeing
+  a context twice on some errors).
+
 Jun 6, 2003
 
 * ADDED: option wide_column_threashold, predicate odbc_debug/1 and some
